[package]
name = "hadron"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
keyvalues-serde = "0.2"
serde = { version = "1", features = ["derive"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unwrap_or_default = "deny"
get_unwrap = "deny"
map_unwrap_or = "deny"
unnecessary_unwrap = "deny"
mem_forget = "deny"
only_used_in_recursion = "deny"
allow_attributes = "deny"
clone_on_ref_ptr = "deny"
mutex_atomic = "deny"
rc_mutex = "deny"
